SERVER-70237 Chunks merge commit must not create a BSON object too large